# Raphael

./: build.gradle  keystore  settings.gradle
demo/: build.gradle  proguard-rules.pro
demo/debug/: demo-debug.apk  output-metadata.json
demo/release/: demo-release.apk  output-metadata.json
demo/sampledata/: maps  report
demo/src/main/: AndroidManifest.xml
demo/src/main/cpp/: CMakeLists.txt  native-lib.cpp
demo/src/main/java/com/bytedance/demo/: DemoApp.java  MainActivity.java  MemoryHookTestNative.java
demo/src/main/res/layout/: main.xml
mylibrary/: build.gradle
mylibrary/src/androidTest/java/cn/jiguang/mylibrary/: ExampleInstrumentedTest.java
mylibrary/src/main/: AndroidManifest.xml
mylibrary/src/main/cpp/: CMakeLists.txt  native-lib.cpp
mylibrary/src/main/java/cn/jiguang/mylibrary/: MemoryHookTestNative.java
mylibrary/src/test/java/cn/jiguang/mylibrary/: ExampleUnitTest.java
repo/: mylibrary-release.aar
